--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-vue": "^6.1.2",
-    "quasar-app-extension-ide-helper": "^1.0.0"
+    "quasar-app-extension-ide-helper": "^1.0.0",
+    "workbox-webpack-plugin": "^5.0.0"
   },
   "browserslist": [
     "ie >= 11",
